; ModuleID = '/home/carl/AnghaBench/tmux/compat/extr_utf8proc.c_utf8proc_mbtowc.c'
source_filename = "/home/carl/AnghaBench/tmux/compat/extr_utf8proc.c_utf8proc_mbtowc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @utf8proc_mbtowc(i64* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64* %0, i64** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %27

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = load i64, i64* %7, align 8
  %15 = load i64*, i64** %5, align 8
  %16 = call i64 @utf8proc_iterate(i8* %13, i64 %14, i64* %15)
  store i64 %16, i64* %8, align 8
  %17 = load i64*, i64** %5, align 8
  %18 = load i64, i64* %17, align 8
  %19 = icmp eq i64 %18, -1
  br i1 %19, label %23, label %20

20:                                               ; preds = %12
  %21 = load i64, i64* %8, align 8
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %20, %12
  store i32 -1, i32* %4, align 4
  br label %27

24:                                               ; preds = %20
  %25 = load i64, i64* %8, align 8
  %26 = trunc i64 %25 to i32
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %24, %23, %11
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i64 @utf8proc_iterate(i8*, i64, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
